style: rename app to Neo Calculator

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name">Premium Calculator</string>
+    <string name="app_name">Neo Calculator</string>
 
     <string name="calculator">Calculator</string>
     <string name="history">History</string>
